--- a/GameMain.xaml
+++ b/GameMain.xaml
@@ -7,10 +7,10 @@
         <TextBlock Height="80.016" Width="310.062" HorizontalAlignment="Right" Margin="0,50,50,0"  VerticalAlignment="Top" Name="txtUsergold" Style="{DynamicResource BodyCenter-Sketch}" FontSize="32" Canvas.Left="440.088" Canvas.Top="0" />
         <TextBlock Height="80.016" Width="300.06" HorizontalAlignment="Left" Margin="50,50,0,0"  VerticalAlignment="Top" Name="txtUsername" Style="{DynamicResource BodyCenter-Sketch}" FontSize="32" Canvas.Left="0" Canvas.Top="0" />
         
-        <Button Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="48,0,0,50" Name="btnAdventure" Click="btnAdventure_Click" Style="{DynamicResource Button-Sketch}" FontSize="22" Canvas.Left="2" Canvas.Top="470">Adventure</Button>
-        <Button Height="50" Width="120.024" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="188,0,0,50" Name="btnFeed" Click="btnFeed_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="5.001" Canvas.Top="470">Feed</Button>
-        <Button Height="50" VerticalAlignment="Bottom" Margin="328,0,352,50" Name="btnShopping" Click="btnShopping_Click"  Style="{DynamicResource Button-Sketch}" FontSize="22" Canvas.Left="8.335" Canvas.Top="470" Width="110.022">Shopping</Button>
-        <Button Height="50" Width="120.024" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,212,50" Name="btnHelp" Click="btnHelp_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="465.093" Canvas.Top="470.01">Help</Button>
+        <Button Height="50" Width="120" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="48,0,0,50" Name="btnAdventure" Click="btnAdventure_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="2" Canvas.Top="470">寻宝</Button>
+        <Button Height="50" Width="120.024" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="188,0,0,50" Name="btnFeed" Click="btnFeed_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="5.001" Canvas.Top="470">喂食</Button>
+        <Button Height="50" VerticalAlignment="Bottom" Margin="328,0,352,50" Name="btnShopping" Click="btnShopping_Click"  Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="8.335" Canvas.Top="470" Width="110.022">购物</Button>
+        <Button Height="50" Width="120.024" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,212,50" Name="btnHelp" Click="btnHelp_Click" Style="{DynamicResource Button-Sketch}" FontSize="28" Canvas.Left="465.093" Canvas.Top="470.01">帮助</Button>
         <Button Margin="0,0,50,50" Style="{DynamicResource Button-Sketch}" VerticalAlignment="Bottom" Height="50.01" Name="btnBack" Content="返回" Click="btnBack_Click" HorizontalAlignment="Right" Width="150" FontSize="28" Canvas.Left="600" Canvas.Top="470" />
         
         
